v.1.4.0

- added a few unique gears
- reworked inner code. Might be buggy. Goal: separate my data generation code from actual in game code. Data gen code should never run outside of my dev environment.
As a result some ring and necklaces changed ids