@@ -3,3 +3,4 @@ v.1.4.0
 - added a few unique gears
 - reworked inner code. Might be buggy. Goal: separate my data generation code from actual in game code. Data gen code should never run outside of my dev environment.
 As a result some ring and necklaces changed ids
+- added datapack effects! You can use similar format to spells and make effects do custom things, or just make them purely give stats, even vanilla ones!
